Fix button alignment issue.

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1528,7 +1528,7 @@ legend + .control-group {
 }
 
 .form-horizontal .form-actions {
-  padding-left: 160px;
+  padding-left: 144px;
 }
 
 table {
